2013-01-31	Marzo Sette Torres Junior <marzojr@yahoo.com>
	* configure.ac, hash_utils.h, Makefile.mingw: Improved detection of hashmaps
	  and hashsets: in order of preference, configure will now look for the TR1
	  hash maps/sets (preferred on GCC 4.3+), then for "ext/hash_(map|set)", and
	  finally "hash_(map|set); if none are found, DONT_HAVE_HASH_(MAP|SET) will
	  be defined so compilation does not fail. MinGW builds will now make use of
	  tr1 unordered maps/sets. xBR scalers are no longer markes as experimental
	  in MinGW.
	Rev 7353
	* audio/AudioChannel.cc: Eliminating warnings.
	Rev 7354
	* all: Eliminating warnings (mainly from Win32 builds).

2013-01-30 Dominik Reichardt <dominus@users.sourceforge.net>	
	* audio/midi_drivers/CoreAudioMidiDriver.*: better error handling by Marzo,
	  fixed USE_DEPRECATED_COREAUDIO_API define to make Exult run on PPC OS X
	  again, fixed copyright headers.
	* audio/midi_drivers/CoreMidiDriver.*: fixed copyright headers.
	  
2013-01-29 Dominik Reichardt <dominus@users.sourceforge.net>	
	* configure.ac, audio/midi_drivers/CoreAudioMidiDriver.*: switched to AUGraph, 
	  synchronized with ScummVM's CoreAudio MIDI driver. Added two frameworks 
	  needed for that.
	  
2013-01-28 Dominik Reichardt <dominus@users.sourceforge.net>	
	* audio/midi_drivers/CoreAudioMidiDriver.*: ripped out code that went into 
	  the CoreMidiDriver a long time ago.
	  
2013-01-27	Malignant Manor <malignantmanor@users.sourceforge.net>
	* actors.*: charmed_more_difficult was updated for new charmed alignment.
	  charmed_more_difficult will now only put charmed party members into combat
	  when not in combat mode.

2013-01-26	Marzo Sette Torres Junior <marzojr@yahoo.com>
	* actors.cc: Clearing frame_time when avatar and NPCs aren't performing an
	  action (since actions force a delay at the end to prevent skipping steps).
	  When clearing casting frames, add them as dirty before changing mode so
	  they will be cleared from the screen.